--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+    color: white;
 }
 
 body {
@@ -13,6 +14,9 @@ body {
     height: 100dvh;
     background-size: cover;
     background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 body::before {
@@ -22,4 +26,15 @@ body::before {
     height: 100dvh;
     background: rgb(0, 0, 0, 0.15);
     backdrop-filter: blur(15px);
+}
+
+.main-container {
+
+    width: 300px;
+    height: 496px;
+    z-index: 1;
+    background: linear-gradient(to top, rgb(0, 0, 0, 0.15), rgb(255, 255, 255, 0.15));
+    border-radius: 12px;
+    backdrop-filter: blur(100px);
+
 }
