--- a/style.css
+++ b/style.css
@@ -36,5 +36,20 @@ body::before {
     background: linear-gradient(to top, rgb(0, 0, 0, 0.15), rgb(255, 255, 255, 0.15));
     border-radius: 12px;
     backdrop-filter: blur(100px);
+    padding: 20px;
 
 }
+
+/* INPUT CONTAINER*/
+.city-input {
+    width: 100%;
+    padding: 10px 16px;
+    border-radius: 99px;
+    border: 3px solid transparent;
+    background: rgb(0,0,0,0.15);
+
+    
+}
+
+
+/* END INPUT CONTAINER*/
